test/fixtures/error/pages/error.vue
<template>
  <h1>Error page</h1>
</template>

<script>
/* eslint no-undef: 0 */
export default {
  not_defined
}
</script>
